# crawler-mercados

./: .gitignore  README.md  crawler_shibata.py  docker-compose.yml  makefile  pyproject.toml
crawlers/: .gitignore  Dockerfile  README.md  dev.sh  makefile  manage.py  pyproject.toml  scrapy.cfg  uwsgi.ini
crawlers/commons/: geoutils.py
crawlers/core/: forms.py  models.py  urls.py  views.py
crawlers/core/migrations/: 0001_initial.py  0002_mercado.py  0003_mercado_unidade.py  0004_produto_categoria_produto_departamento_and_more.py  0005_crawl_remove_produto_mercado_remove_produto_preco_and_more.py  0006_alter_produto_item.py  0006_produto_nome_alter_produto_item.py  0007_remove_produto_peso_g_mercado_filial_and_more.py  0008_unacced_e_trigram.py  0009_adiciona_coordenadas_geograficas_do_mercado.py  0010_index_search_vector.py
crawlers/core/service/: mercado_svc.py  produto_svc.py
crawlers/core/templates/: produtos.xml
crawlers/crawlers/: asgi.py  items.py  middlewares.py  pipelines.py  settings.py  urls.py  wsgi.py
crawlers/crawlers/spiders/: __init__.py  spider_carrefour.py  spider_pao_de_acucar.py  spider_shibata.py  spider_spani.py  spider_tenda.py
crawlers/docker/compose/: dev.yaml  pgnginx.yaml  prodlike.yaml  test.yml
crawlers/frontend/: nuxt.config.js  package-lock.json  package.json  router.js
crawlers/frontend/components/: filter-dialog.vue  footer.vue  item.vue  loading.vue  sidenav-left.vue  toolbar.vue
crawlers/frontend/helpers/: itemhelper.js
crawlers/manifests/: deployment.yaml  ingress.yaml  service.yaml
(+17 files in other folders)
