[tool.poetry]
name = "crawler-mercados"
version = "0.1.0"
description = "Crawleia os principais supermercados de são josé dos campos pra saber onde os preços estão mais baixos"
authors = ["Natan Lima Viana <natanvianat16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
