[tool.poetry]
name = "crawlers"
version = "0.1.0"
description = "Crawleia os principais supermercados de são josé dos campos pra saber onde os preços estão mais baixos"
authors = ["Natan Lima Viana <natanvianat16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
python-decouple = "^3.6"
psycopg2-binary = "^2.9.3"
scrapy = "^2.8.0"
pytz = "^2022.7.1"
numpy = "^1.24.2"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
mypy = "^1.0.1"
ruff = "^0.0.252"
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
